--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         compileSdkVersion = 33
         targetSdkVersion = 33
         minSdkVersion = 24
-        appId = "com.example.decathlon"
+        appId = "com.example.starwars"
         versions = [
                 kotlin      : '1.7.10',
                 hilt        : '2.44',
