--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
 
     ext {
         buildToolsVersion = "30.0.3"
-        compileSdkVersion = 33
+        compileSdkVersion = 34
         targetSdkVersion = 33
         minSdkVersion = 24
-        appId = "com.example.starwars"
+        appId = "com.example.currency"
         versions = [
                 kotlin      : '1.7.10',
                 hilt        : '2.44',
@@ -23,10 +23,11 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradlePlugin}"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.7.10"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
-        classpath "com.google.gms:google-services:4.3.14"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.44"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+        classpath "com.google.gms:google-services:4.4.1"
+
 
     }
 }
