--- a/data/build.gradle
+++ b/data/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     implementation project(":domain")
     implementation "com.google.dagger:hilt-android:2.44"
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     kapt "com.google.dagger:hilt-android-compiler:2.44"
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -43,4 +44,6 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.4"
     implementation "androidx.room:room-ktx:2.2.4"
     kapt "androidx.room:room-compiler:2.2.4"
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
 }
